# CTU_parallel-_algorithms

./: .gitignore  README.md
hw3_heat_diffusion_mpi/: .gitignore
hw3_heat_diffusion_mpi/src/: HeatDiffusion.cpp
hw_1_LU_decomposition/: .gitignore  CMakeLists.txt  a  out  res_15_parallel  res_small_linear.txt  res_small_parallel.txt
hw_1_LU_decomposition/include/: LU.h  barrier.hpp
hw_1_LU_decomposition/src/: InstanceGenerator.cpp  LU.cpp  main.c  main.cpp  read_bin_matrix.cpp
hw_1_code_skeletons/cmake/: CMakeLists.txt
hw_1_code_skeletons/src/: InstanceGenerator.cpp  LU.cpp
hw_2_triangulation_of_convex_sets/: CMakeLists.txt  README.md  compile.sh
hw_2_triangulation_of_convex_sets/hw_2_code_skeletons/cmake/: CMakeLists.txt
hw_2_triangulation_of_convex_sets/src/: instance_generator.cpp  triangulation.cpp
hw_3_heat_diffusion_mpi/src/: HeatDiffusion.cpp
lab2_codes_skeletons/: CMakeLists.txt
lab2_codes_skeletons/src/: CounterSecondTry.cpp  HelloThreads.cpp  ProducerConsumerBusyWaiting.cpp  ProducerConsumerCondVar.cpp
lab2_mutex_cv_lockguards/src/: CounterFirstTry.cpp
lab3_atomic_barrier/: CMakeLists.txt
lab3_atomic_barrier/src/: Async.cpp  AtomicCounter.cpp  Barrier.hpp  BarrierTest.cpp  PromiseAndFuture.cpp
lab5_openmp_1/src/: HelloWorld.cpp  MonteCarloPi.cpp  Utils.hpp  VectorNormalization.cpp
lab6_openmp_2/cmake/: CMakeLists.txt
lab6_openmp_2/src/: FalseSharing.cpp  MergeSort.cpp  Utils.hpp  VectorNormalization.cpp
lab9_mpi/src/: HelloWorld.cpp  Iddqd.cpp  Idkfa.cpp  VectorNormalization.cpp
semproj_code_skeleton/src/: InstanceGenerator.cpp  Storage.cpp  Utils.h
training_parallel_merge_sort/: CMakeLists.txt
training_parallel_merge_sort/include/: implementations.h
training_parallel_merge_sort/src/: linear_implementation.cpp  main.cpp  parallel_implementation.cpp
